--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ips-cell (13.12.1387462684-1) precise; urgency=low
+
+  * Added target-blkio-requests varz.
+
+ --  <taru0216@gmail.com>  Thu, 19 Dec 2013 14:19:12 +0000
+
 ips-cell (13.12.1387428382-1) precise; urgency=low
 
   * Optimizes sandbox instance name to avoid a long name.
