--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ips-cell (1387524558-1) precise; urgency=low
+ips-cell (13.12.1387524558-1) precise; urgency=low
 
   * Fixed double target-blkio-requests because of LVM IO counters.
 
