Added target-blkio-bytes varz.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ips-cell (14.04.1396491150-1) precise; urgency=low
+
+  * Added target-blkio-bytes varz.
+
+ -- Masato Taruishi <taru0216@gmail.com>  Thu, 03 Apr 2014 11:13:06 +0900
+
 ips-cell (14.01.1390036067-1) precise; urgency=low
 
   * Added ips-mon-scraped
